added the active blog

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
+<!DOCTYPE ml>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>New Active Website</title>
+  <link rel="stylesheet" href="style css/blog.css">
 </head>
 
 <body>
+
+  <div>
+    <p>My Paragrahp Here I am Not Busy Man</p>
+    <h2>What Is your Dream none abobe to the sequrity</h2>
+  </div>
 
 </body>
 
