added the second and third blog

--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 <body>
 
   <div>
-    <p>My Paragrahp Here I am Not Busy Man</p>
-    <h2>What Is your Dream none abobe to the sequrity</h2>
+    <h2>My First Website</h2>
+    <p>This is My Website I am Here</p>
+  </div>
+
+  <div>
+    <h2>My Second Website</h2>
+    <p>This is My Website I am Here</p>
+  </div>
+
+  <div>
+    <h2>My Third Website</h2>
+    <p>This is My Website I am Here</p>
   </div>
 
 </body>
