add a meaningfull message

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <p>This is My Website I am Here</p>
   </div>
 
+  <div>
+    <h3>You To Push incremental code </h3>
+    <ul>
+      <li>git add .</li>
+      <li>git commit -m"add a meanigfull message"</li>
+      <li>push</li>
+    </ul>
+  </div>
+
 </body>
 
 </html>
