--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
       <li>push</li>
     </ul>
   </div>
+  <diV>
+    <h3>It Is Beutyfull Images Here</h3>
+    <img src="images/hardy.png" alt="">
 
+  </diV>
 </body>
 
 </html>
