hardy is active website

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </ul>
   </div>
   <diV>
-    <h3>It Is Beutyfull Images Here</h3>
+    <h3>hardy is not good</h3>
     <img src="images/hardy.png" alt="">
 
   </diV>
